@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.7 2018/10/26 17:03:27 bsiegert Exp $
-bin/enchant
-bin/enchant-lsmod
-include/enchant/enchant++.h
-include/enchant/enchant-provider.h
-include/enchant/enchant.h
-${PLIST.aspell}lib/enchant/libenchant_aspell.la
-${PLIST.ispell}lib/enchant/libenchant_ispell.la
-${PLIST.hunspell}lib/enchant/libenchant_myspell.la
-lib/libenchant.la
-lib/pkgconfig/enchant.pc
-man/man1/enchant.1
-share/examples/enchant-1.ordering
