@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.18 2021/10/26 11:21:52 nia Exp $
-
-BLAKE2s (enchant-1.6.0.tar.gz) = ca0a2d456358c126ba2f2977d5f244f87339114bb040f546fe83c748d0ab3380
-SHA512 (enchant-1.6.0.tar.gz) = 0ca1634bb783df51512df4abecc89abdadee6baf7330d6e5f90cc15d10779896a3521a1c079ecc07e4df4f7a018ce398cca9d0125a7845a314a059840ebc9137
-Size (enchant-1.6.0.tar.gz) = 607018 bytes
