@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2784 2024/04/28 10:30:16 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2785 2024/04/28 10:31:40 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4600,3 +4600,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated textproc/php-enchant to 8.2.18nb3 [wiz 2024-04-28]
 	Updated meta-pkgs/php56-extensions to 5.6.40nb2 [wiz 2024-04-28]
 	Updated x11/kdelibs4 to 4.14.38nb38 [wiz 2024-04-28]
+	Removed textproc/enchant successor textproc/enchant2 [wiz 2024-04-28]
